--- a/src/main/resources/languages/messages.properties
+++ b/src/main/resources/languages/messages.properties
@@ -1,4 +1,15 @@
 application.name=WSB Bugtracker
 nav.issues=Issues
 
+project.placeholder=Choose project
+assignee.placeholder=Choose assignee
+state.placeholder=Choose state
+
+common.search=Search
+common.clear=Clear
+
+state.TODO=To do
+state.IN_PROGRESS=In progress
+state.FIXED=Fixed
+state.CLOSED=Closed
 
