--- a/src/main/resources/languages/messages_pl.properties
+++ b/src/main/resources/languages/messages_pl.properties
@@ -1,2 +1,14 @@
 application.name=WSB Bugtracker
 nav.issues=Zgłoszenia
+
+project.placeholder=Wybierz projekt
+assignee.placeholder=Wybierz wykonawcę
+state.placeholder=Wybierz status
+
+common.search=Szukaj
+common.clear=Czyść
+
+state.TODO=Do zrobienia
+state.IN_PROGRESS=W trakcie
+state.FIXED=Zrobione
+state.CLOSED=Zamknięte 
